--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
-package-lock
-node_modules
+# Ignore the node_modules directory
+node_modules/
+
+# Ignore Logs
+logs
+*.log
+
+# Ignore the build directory
+**/dist
+
+# The file containing environment variables 
+.env
+
+# Ignore IDE specific files
+.idea/
+.vscode/
+*.sw*
